--- a/admin.html
+++ b/admin.html
@@ -71,7 +71,8 @@ span.tooltip {
 <script src="tags.js"></script>
 <script src="who-data.js"></script>
 <script src="notifier.js"></script>
-<script src="czar-nogoogle.js"></script>
+<script src="googleaccess.js"></script>
+<script src="czar.js"></script>
 
 </head>
 
@@ -102,6 +103,10 @@ span.tooltip {
   <a id="team_url" target="_blank" href="">Team site</a>
 </div>
 <br clear=left>
+
+<form id=create name=create style="margin-bottom: 10">
+<input type=text name=label size=30 style='font-weight: bold'>
+</form>
 
 <div id=tags></div>
 <hr>
